.provarCaches/00Df2000001KKNJEA4/objects/Incapfs__ActionSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Incapfs__ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visualforce Page</fullName>
                    <default>true</default>
                    <label>Visualforce Page</label>
                </value>
                <value>
                    <fullName>Apex Method</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incapfs__ClassName__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__MethodLabel__c</fullName>
        <label>Method Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__ObjectSetting__c</fullName>
        <label>Object Setting</label>
        <referenceTo>Incapfs__ObjectSetting__mdt</referenceTo>
        <relationshipName>ActionSettings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Incapfs__PageName__c</fullName>
        <label>Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incapfs__ParameterName__c</fullName>
        <label>Parameter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ForceSight_Action</label>
    <pluralLabel>Actions</pluralLabel>
</CustomObject>